Adding a more generic and faster method for identifying classes under a specific package that inherits from a provided type.